--- a/index.html
+++ b/index.html
@@ -13,11 +13,28 @@ EMAIL: hudaau@uci.edu
    <!-- you would link to an external stylesheet here! -->
    <!-- you would also link to Bootstrap here! -->
   <title>Ashar Huda Portfolio</title>
+  <style>
+    body{
+      padding: 25px;
+      background-color:#222020
+    }
+  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div id = "container">
+    <p class="text">Hello, I'm Ashar Huda, a Software Engineering major at UC Irvine.</p>
+  </div>
+
+
+
+
+
+
+
   <p>
-    <a href="http://validator.w3.org/check?uri=referer">
-       W3C validator
+    <!-- <a href="http://validator.w3.org/check?uri=referer">
+       W3C validator -->
     </a>
   </p>
 </body>
