--- a/index.html
+++ b/index.html
@@ -20,10 +20,15 @@ EMAIL: hudaau@uci.edu
     }
   </style>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
   <div id = "container">
     <p class="text">Hello, I'm Ashar Huda, a Software Engineering major at UC Irvine.</p>
+  </div>
+  <div id="social-links" style="display: flex; justify-content: center; gap: 20px;">
+    <a href="#" class="fa fa-linkedin"></a>
+    <a href="#" class="fa fa-github"></a>
   </div>
 
 
@@ -37,5 +42,6 @@ EMAIL: hudaau@uci.edu
        W3C validator -->
     </a>
   </p>
+  <script src="events.js"></script>
 </body>
 </html>
