i think i finally finished the typewriter animations it took a me a very long time

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ EMAIL: hudaau@uci.edu
 <body>
   <div id = "container">
     <p class="text">Hello, I'm Ashar Huda, a Software Engineering major at UC Irvine.</p>
+    <p class="text2" style="width: 0; overflow: hidden";>Here is my Personal Portfolio</p>
   </div>
   <div id="social-links" style="display: flex; justify-content: center; gap: 20px;">
     <a href="#" class="fa fa-linkedin"></a>
