--- a/index.html
+++ b/index.html
@@ -22,15 +22,44 @@ EMAIL: hudaau@uci.edu
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
+
 <body>
   <div id = "container">
-    <p class="text">Hello, I'm Ashar Huda, a Software Engineering major at UC Irvine.</p>
-    <p class="text2" style="width: 0; overflow: hidden";>Here is my Personal Portfolio</p>
+    <p class="text">Hello, I'm Ashar Huda, a Software Engineering student at UC Irvine.</p>
+    <!-- <p class="text2">Here is my Personal Portfolio</p> -->
   </div>
   <div id="social-links" style="display: flex; justify-content: center; gap: 20px;">
     <a href="#" class="fa fa-linkedin"></a>
     <a href="#" class="fa fa-github"></a>
   </div>
+  <section class="about-container">
+    <h2 class="section-title">About</h2>
+    <div class="content">
+        <div class="personalimage">
+            <img src="images\IMG_3523.jpg" alt="Profile Picture">
+        </div>
+        <div class="text-section">
+            <p>
+                Hello, this is my Personal Portfolio! I am currently in my third year at UCI, and looking for Software Engineering internships for the 2025 Summer. I have a passion for coding and finding new challenges. In my portfolio I want to share some of my skills and projects I have done so far as a programmer. 
+            </p>
+        </div>
+    </div>
+</section>
+
+<div id = "skills">
+  <section class="skills_container">
+    <div class="skill_text">Skills</div>
+    <div class="skills_text">
+      <div class="skill">
+          <p class="skill-title">Python</p>
+          <img src="https://cdn.simpleicons.org/python" alt="Python Logo" class="skill-logo">
+      </div>
+  </div>
+  </section>
+</div>
+  </div>
+
 
 
 
