added a new container for skills, almost done with that

--- a/index.html
+++ b/index.html
@@ -55,6 +55,17 @@ EMAIL: hudaau@uci.edu
           <p class="skill-title">Python</p>
           <img src="https://cdn.simpleicons.org/python" alt="Python Logo" class="skill-logo">
       </div>
+      <div class="skill">
+          <p class="skill-title">Java</p>
+          <img src="images/java.png" alt="Java Logo" class="skill-logo">
+          <div class="skill">
+            <p class="skill-title">C++</p>
+            <img src="https://cdn.simpleicons.org/cplusplus" alt="C++ Logo" class="skill-logo">
+        </div>
+        <div class="skill">
+            <p class="skill-title">HTML</p>
+            <img src="https://cdn.simpleicons.org/html5" alt="HTML Logo" class="skill-logo">
+        </div>
   </div>
   </section>
 </div>
