finished projects grid and added button to download resume, i think im almost done but im going to sleep now

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ EMAIL: hudaau@uci.edu
 
 
 <body>
+
   <div id = "container">
     <p class="text">Hello, I'm Ashar Huda, a Software Engineering student at UC Irvine.</p>
     <!-- <p class="text2">Here is my Personal Portfolio</p> -->
@@ -32,6 +33,9 @@ EMAIL: hudaau@uci.edu
   <div id="social-links" style="display: flex; justify-content: center; gap: 20px;">
     <a href="#" class="fa fa-linkedin"></a>
     <a href="#" class="fa fa-github"></a>
+    <a href="images/Ashar Huda CS Resume.pdf" download="resume">
+      <i class="fa fa-download" aria-hidden="true"></i>
+    </a>
   </div>
   <section class="about-container">
     <h2 class="section-title">About</h2>
@@ -67,6 +71,26 @@ EMAIL: hudaau@uci.edu
             <img src="https://cdn.simpleicons.org/html5" alt="HTML Logo" class="skill-logo">
         </div>
   </div>
+  </section>
+</div>
+
+<!--Projects-->
+<div id="projects">
+  <section class="project_container">
+    <h2 class="project_heading">Projects</h2>
+        <div class="project_grid">
+            <a href="https://github.com/mkimball1/trailblazers" class="project_card">
+                <img src="images\picture-logo.png" alt="Project 1" class="project_image">
+                <div class="project_hover">
+                    <h3>Trailblazers</h3>
+                </div>
+            </a>
+            <a href="https://github.com/ssaidwhotho/PirateSearchEngine" class="project_card">
+              <img src="images\PirateBackground.png" alt="Project 2" class="project_image">
+              <div class="project_hover">
+                  <h3>Pirate Search Engine</h3>
+              </div>
+          </a>
   </section>
 </div>
   </div>
