added a contact section, it looks pretty good but no functionality yet, the submit button hover doesnt work

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ EMAIL: hudaau@uci.edu
   <div id="social-links" style="display: flex; justify-content: center; gap: 20px;">
     <a href="#" class="fa fa-linkedin"></a>
     <a href="#" class="fa fa-github"></a>
-    <a href="images/Ashar Huda CS Resume.pdf" download="resume">
-      <i class="fa fa-download" aria-hidden="true"></i>
+    <a href="images/Ashar Huda CS Resume.pdf" download="Ashar Huda Resume">
+      <img src="images\cv.png" alt="Resume Icon">
     </a>
   </div>
   <section class="about-container">
@@ -91,6 +91,24 @@ EMAIL: hudaau@uci.edu
                   <h3>Pirate Search Engine</h3>
               </div>
           </a>
+  </section>
+</div>
+
+<div id="contact">
+  <section class="contact-section">
+    <h1>Contact Me</h1>
+    <form class ="contact-form">
+      <label for="name">Name</label>
+      <input type="text" id="name" name="name" placeholder="First Last" required>
+
+      <label for="email">Email</label>
+      <input type="text" id="email" name="email" placeholder="email@gmail.com" required>
+
+      <label for="message">Message</label>
+      <textarea id="message" name="message" placeholder="Type your message here..." style="height: 200px" required></textarea>
+      <input type="submit" value="Submit">
+
+    </form>
   </section>
 </div>
   </div>
