fixed the centering of divs and almost finished, might implement a navigation drop down menu

--- a/index.html
+++ b/index.html
@@ -50,30 +50,29 @@ EMAIL: hudaau@uci.edu
         </div>
     </div>
 </section>
-
-<div id = "skills">
-  <section class="skills_container">
-    <div class="skill_text">Skills</div>
-    <div class="skills_text">
-      <div class="skill">
-          <p class="skill-title">Python</p>
-          <img src="https://cdn.simpleicons.org/python" alt="Python Logo" class="skill-logo">
+<div class="divider"></div>
+<div class="skills_container">
+  <div class="skill_text">Skills</div>
+  <div class="skills_grid">
+      <div class="skill_card">
+          <img src="https://cdn.simpleicons.org/python" alt="Python Logo" class="skill_logo">
+          <p class="skill_title">Python</p>
       </div>
-      <div class="skill">
-          <p class="skill-title">Java</p>
-          <img src="images/java.png" alt="Java Logo" class="skill-logo">
-          <div class="skill">
-            <p class="skill-title">C++</p>
-            <img src="https://cdn.simpleicons.org/cplusplus" alt="C++ Logo" class="skill-logo">
-        </div>
-        <div class="skill">
-            <p class="skill-title">HTML</p>
-            <img src="https://cdn.simpleicons.org/html5" alt="HTML Logo" class="skill-logo">
-        </div>
+      <div class="skill_card">
+          <img src="images/java.png" alt="Java Logo" class="skill_logo">
+          <p class="skill_title">Java</p>
+      </div>
+      <div class="skill_card">
+          <img src="https://cdn.simpleicons.org/cplusplus" alt="C++ Logo" class="skill_logo">
+          <p class="skill_title">C++</p>
+      </div>
+      <div class="skill_card">
+          <img src="https://cdn.simpleicons.org/html5" alt="HTML Logo" class="skill_logo">
+          <p class="skill_title">HTML</p>
+      </div>
   </div>
-  </section>
 </div>
-
+<!-- <img src="images/java.png" alt="Java Logo" class="skill-logo"> -->
 <!--Projects-->
 <div id="projects">
   <section class="project_container">
