--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ EMAIL: hudaau@uci.edu
     <h2 class="section-title">About</h2>
     <div class="content">
         <div class="personalimage">
-            <img src="images\IMG_3523.jpg" alt="Profile Picture">
+            <img src="images/IMG_3523.jpg" alt="Profile Picture">
         </div>
         <div class="text-section">
             <p>
@@ -112,6 +112,7 @@ EMAIL: hudaau@uci.edu
                   <h3>Pirate Search Engine</h3>
               </div>
           </a>
+          </div>
   </section>
 </div>
 
@@ -132,11 +133,9 @@ EMAIL: hudaau@uci.edu
     </form>
   </section>
 </div>
-  </div>
   <p>
     <!-- <a href="http://validator.w3.org/check?uri=referer">
        W3C validator -->
-    </a>
   </p>
   <script src="events.js"></script>
 </body>
